fix(ffe-system-message): overstyrer lenkefarge i dark mode

--- a/packages/ffe-system-message/less/theme.less
+++ b/packages/ffe-system-message/less/theme.less
@@ -25,6 +25,12 @@
     --ffe-v-system-message-success-bg-color: var(--ffe-farge-nordlys-30);
     --ffe-v-system-message-news-icon-bg-color: var(--ffe-farge-nordlys-wcag);
 
+    /** Link colors */
+    --ffe-v-system-message-link-color: var(--ffe-farge-vann);
+    --ffe-v-system-message-link-color-hover: var(--ffe-farge-fjell);
+    --ffe-v-system-message-link-color-visited: var(--ffe-farge-lyng);
+    --ffe-v-system-message-link-color-focus: var(--ffe-farge-hvit);
+
     @media (prefers-color-scheme: dark) {
         .native {
             --ffe-v-system-message-info-bg-color: var(--ffe-farge-vann-30);
